# sraosha

./: .dockerignore  .editorconfig  .env.example  .gitignore  .grype.yaml  .pre-commit-config.yaml  .sraosha.example  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTRUCTIONS.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  release.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
dashboard/: biome.json  index.html  package.json
dashboard/src/: App.tsx  main.tsx
dashboard/src/api/: client.ts
dashboard/src/components/: ComplianceScore.tsx  ContractHealthBadge.tsx  DriftChart.tsx  ImpactGraph.tsx  RunHistoryTable.tsx
dashboard/src/pages/: Compliance.tsx  ContractDetail.tsx  DriftMetrics.tsx  ImpactMap.tsx  Overview.tsx
examples/: airflow_dag_example.py  standalone_example.py
examples/dbt_project_example/: dbt_project.yml
frontend/: .env.example  .gitignore  README.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  schemaPath.ts
frontend/src/components/connection/: IntrospectionSchemaField.tsx
frontend/src/components/editors/: YamlEditor.tsx
frontend/src/components/layout/: AppLayout.tsx  ThemeToggle.tsx
frontend/src/pages/: ContractsPage.tsx  DataQualityPage.tsx  HomePage.tsx  RunsPage.tsx  SchedulesPage.tsx
frontend/src/pages/contracts/: ContractEditorPage.tsx
frontend/src/pages/data-quality/: DataQualityEditorPage.tsx  mergeSodaclYaml.ts
frontend/src/pages/settings/: AlertingSettingsPage.tsx  ConnectionsSettingsPage.tsx  SettingsLayout.tsx  TeamsSettingsPage.tsx  serverTypes.ts
frontend/src/ui/: titleStyles.ts
scripts/: build_dashboard.sh  seed_demo.py  seed_demo_data.py  sync-web-dist.sh
sraosha/: __init__.py  alembic.ini  config.py  crypto.py  db.py
sraosha/alembic/versions/: 002_drop_compliance_scores.py
sraosha/alerting/: base.py  channel_types.py  dispatcher.py  email.py  profile_contact.py  slack.py
sraosha/api/: app.py  contract_yaml.py  deps.py  error_handlers.py  introspect.py  spa.py
sraosha/api/routers/: alerting_profiles.py  compliance.py  connections.py  contracts.py  dashboard.py  data_quality.py  drift.py  impact.py  runs.py  schedules.py  teams.py
sraosha/api/templates/: base.html  compliance.html  connection_form.html  connections_list.html  contract_detail.html  contract_discover.html  contract_form.html  contracts_list.html  dq_detail.html  dq_list.html  dq_run_detail.html  dq_wizard.html  impact.html  overview.html  run_detail.html  schedules.html  settings_alerting_form.html  settings_alerting_list.html  settings_team_form.html  settings_teams_list.html
sraosha/api/templates/partials/: contract_delete_modal.html  contract_field_row.html  contract_schedule_card.html  contract_server_block.html  contract_validation_result.html  contract_yaml_preview.html  discover_table_list.html  dq_schedule_card.html  dq_table_picker.html  icons.html  impact_result.html  search_results.html  sidebar.html  (+1 more)
sraosha/cli/: main.py
sraosha/compliance/: __init__.py  scoring.py
sraosha/core/: __init__.py  connection_server_types.py  credentials.py  engine.py  loader.py  runner.py
sraosha/dq/: check_templates.py  config_builder.py  factory.py  protocol.py  result.py  runner.py
sraosha/dq/backends/: __init__.py  soda.py
sraosha/drift/: alerter.py  baseline.py  metrics.py  scanner.py
sraosha/hooks/: base.py
sraosha/hooks/airflow/: operator.py  provider.py
sraosha/hooks/dbt/: hook.py
sraosha/impact/: analyzer.py  graph.py  parser.py
sraosha/models/: __init__.py  alert.py  alerting.py  base.py  connection.py  contract.py  dq_check.py  dq_run.py  dq_schedule.py  metric.py  run.py  schedule.py  team.py
sraosha/schemas/: alerting_profile.py  compliance.py  connection.py  contract.py  data_quality.py  dq_wizard.py  drift.py  impact.py  introspection.py  run.py  schedule.py  team_settings.py
sraosha/services/: __init__.py  connection_introspect.py  connection_test.py  contract_preview.py  contract_team.py  data_quality.py  schedules.py
sraosha/tasks/: celery_app.py  compliance_compute.py  db.py  dq_scan.py  dq_scheduler.py  drift_scan.py  validation_scheduler.py
sraosha/web/: __init__.py
tests/: conftest.py
tests/fixtures/: sample_contract.yaml  sample_contract_broken.yaml  sample_contract_drift.yaml
tests/integration/: test_airflow_operator.py  test_api.py  test_dbt_hook.py
tests/unit/: test_alerting.py  test_baseline.py  test_compliance_scoring.py  test_config_builder.py  test_connection_test_params.py  test_contract_yaml_connections.py  test_dashboard_compliance_context.py  test_dashboard_team_resolve.py  test_dq_check_templates.py  test_dq_wizard_schema.py  test_drift.py  test_engine.py  test_impact.py  test_loader.py  test_resolve_data_source_name.py  test_runner.py  test_soda_mysql_charset_patch.py
(+1 files in other folders)
