[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sraosha"
version = "0.1.0"
description = "Enforcement, governance, and data quality runtime for data contracts"
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "Sraosha Contributors" }]

dependencies = [
    # Web & API
    "fastapi~=0.135.2",
    "uvicorn[standard]~=0.42.0",
    "jinja2~=3.1.6",

    # Database
    "sqlalchemy[asyncio]~=2.0.48",
    "asyncpg~=0.31.0",
    "alembic~=1.18.4",
    "psycopg2-binary~=2.9.11",

    # Task queue
    "celery[redis]~=5.6.3",

    # Contract validation
    "datacontract-cli~=0.11.7",

    # Utilities
    "networkx~=3.6",
    "pydantic-settings~=2.13.1",
    "typer~=0.24.1",
    "httpx~=0.28.1",
    "pyyaml~=6.0.3",
    "croniter~=6.2.2",
    "cryptography>=42",
]

[project.scripts]
sraosha = "sraosha.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest~=9.0.2",
    "pytest-asyncio~=1.3.0",
    "pytest-cov~=7.1.0",
    "ruff~=0.15.8",
    "mypy~=1.19.1",
    "aiosqlite~=0.22.1",
    "pre-commit~=4.5.1",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
