[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sraosha"
version = "0.2.1"
description = "Enforcement, governance, and data quality runtime for data contracts"
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "Sraosha Contributors" }]

dependencies = [
    "fastapi~=0.135.2",
    "uvicorn[standard]~=0.42.0",
    "sqlalchemy[asyncio]~=2.0.48",
    "asyncpg~=0.31.0",
    "alembic~=1.18.4",
    "psycopg2-binary~=2.9.11",
    "pymysql>=1.1,<2",
    "mysql-connector-python==8.0.30",
    "duckdb>=1.1.0,<2",
    "trino>=0.315",
    "oracledb>=1.1.1,<3",
    "pyodbc>=4.0.39",
    "boto3>=1.28",
    "google-cloud-bigquery>=2.25,<4",
    "snowflake-connector-python>=3.0,<4",
    "PyAthena>=2.2,<3",
    "azure-identity~=1.17.1",

    # Task queue
    "celery[redis]~=5.6.3",

    # Contract validation
    "datacontract-cli~=0.11.7",

    # Utilities
    "pydantic-settings~=2.13.1",
    "typer~=0.24.1",
    "httpx~=0.28.1",
    "pyyaml~=6.0.3",
    "croniter~=6.2.2",
    "cryptography>=42",
]

[project.scripts]
sraosha = "sraosha.cli.main:app"

# Wheel includes the Vite build under sraosha/web/dist. Refresh with scripts/sync-web-dist.sh before release.
[tool.hatch.build.targets.wheel]
packages = ["sraosha"]

[project.optional-dependencies]
dev = [
    "pytest~=9.0.2",
    "pytest-asyncio~=1.3.0",
    "pytest-cov~=7.1.0",
    "ruff~=0.15.8",
    "mypy~=1.19.1",
    "aiosqlite~=0.22.1",
    "pre-commit~=4.5.1",
    "types-PyYAML~=6.0.12.20250915",
    "types-PyMySQL~=1.1.0.20251220",
    "types-croniter~=6.2.2.20260402",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
